--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     implementation "com.discord4j:discord4j-core:3.1.0"
     implementation "com.google.auth:google-auth-library-oauth2-http:0.21.1"
     implementation "com.google.apis:google-api-services-classroom:v1-rev20200801-1.30.10"
+    implementation "com.google.api-client:google-api-client:1.23.0"
+    implementation "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
+    implementation "com.google.apis:google-api-services-youtube:v3-rev222-1.25.0"
+
 
     // Use JUnit test framework
     testImplementation "junit:junit:4.13"
